--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,16 @@ html, body {
   background-color: black;
 }
 
+canvas[data-scene] {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  z-index: 1;
+}
+
 /* Base stacking context */
 .scene-transition-overlay {
   position: fixed;
@@ -134,6 +144,7 @@ html, body {
     filter: brightness(1);
   }
 }
+
 
 
 
